cleaning up and making the validation clean and strict