@@ -11,6 +11,10 @@ import com.sfar.livrili.Mapper.ApprovedPackMapper;
 import com.sfar.livrili.Mapper.OfferForDeliveryGuyMapper;
 import com.sfar.livrili.Mapper.PacksForDeliveryGuyMapper;
 import com.sfar.livrili.Service.DeliveryGuyPackService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -22,8 +26,10 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/DG/pack")
+@RequestMapping("/api/dg/pack")
 @RequiredArgsConstructor
+@Tag(name = "Delivery Guy Pack Management", description = "Operations related to Delivery Guy packages")
+
 public class DeliveryGuyPackController {
 
     private final DeliveryGuyPackService deliveryGuyPackService;
@@ -31,64 +37,119 @@ public class DeliveryGuyPackController {
     private final OfferForDeliveryGuyMapper offerForDeliveryGuyMapper;
     private final ApprovedPackMapper approvedPackMapper;
 
+    @Operation(summary = "Get all packs  for the delivery guy")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully retrieved packs"),
+            @ApiResponse(responseCode = "401", description = "Unauthorized")
+    })
     @GetMapping
-    ResponseEntity<List<DeliveryGuyPackResponseDto>> getAllPacks(HttpServletRequest req) {
+    public ResponseEntity<List<DeliveryGuyPackResponseDto>> getAllPacks(HttpServletRequest req) {
         UUID userId = (UUID) req.getAttribute("userId");
-       List<Pack> packs = deliveryGuyPackService.getPacks(userId) ;
-       List<DeliveryGuyPackResponseDto> packsToShow = packs.stream().map(packsForDeliveryGuyMapper::DeliveryGuyPackResponseDto).collect(Collectors.toList());
+        List<Pack> packs = deliveryGuyPackService.getPacks(userId);
+        List<DeliveryGuyPackResponseDto> packsToShow = packs.stream()
+                .map(packsForDeliveryGuyMapper::DeliveryGuyPackResponseDto)
+                .collect(Collectors.toList());
         return new ResponseEntity<>(packsToShow, HttpStatus.OK);
     }
+
+    @Operation(summary = "Give an offer for a specific pack")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "201", description = "Offer created successfully"),
+            @ApiResponse(responseCode = "400", description = "Bad request")
+    })
     @PostMapping("/offer/{id}")
-    ResponseEntity<OfferResDto>giveOffer(@PathVariable UUID id , @RequestBody OfferRequest offerRequest, HttpServletRequest httpServletRequest) {
+    public ResponseEntity<OfferResDto> giveOffer(
+            @PathVariable UUID id,
+            @RequestBody OfferRequest offerRequest,
+            HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
-        Offer offer = deliveryGuyPackService.CreateOffer(offerRequest,userId,id);
+        Offer offer = deliveryGuyPackService.CreateOffer(offerRequest, userId, id);
         return new ResponseEntity<>(offerForDeliveryGuyMapper.toOfferResDto(offer), HttpStatus.CREATED);
     }
+
+    @Operation(summary = "Get all offers for the delivery guy")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully retrieved offers")
+    })
     @GetMapping("/offer")
-    ResponseEntity<List<GetOfferRes>> getOffer(HttpServletRequest httpServletRequest) {
+    public ResponseEntity<List<GetOfferRes>> getOffer(HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
-        List<Offer> offers = deliveryGuyPackService.getOffers(userId) ;
-
-        List<GetOfferRes> offerRes = offers.stream().map(offerForDeliveryGuyMapper::toGetOfferRes).toList();
+        List<Offer> offers = deliveryGuyPackService.getOffers(userId);
+        List<GetOfferRes> offerRes = offers.stream()
+                .map(offerForDeliveryGuyMapper::toGetOfferRes)
+                .collect(Collectors.toList());
         return new ResponseEntity<>(offerRes, HttpStatus.OK);
-
     }
+
+    @Operation(summary = "Get all approved packs for delivery")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully retrieved approved packs"),
+            @ApiResponse(responseCode = "401", description = "Unauthorized")
+    })
     @GetMapping("/approved")
-    ResponseEntity<List<ApprovedPackDto>> getApprovedPacks(HttpServletRequest httpServletRequest) {
+    public ResponseEntity<List<ApprovedPackDto>> getApprovedPacks(HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
-        List<Pack> packs = deliveryGuyPackService.packsToDeliver(userId) ;
-        List<ApprovedPackDto> approvedPacks = packs.stream().map(approvedPackMapper::toApprovedPackDto).toList();
+        List<Pack> packs = deliveryGuyPackService.packsToDeliver(userId);
+        List<ApprovedPackDto> approvedPacks = packs.stream()
+                .map(approvedPackMapper::toApprovedPackDto)
+                .collect(Collectors.toList());
         return new ResponseEntity<>(approvedPacks, HttpStatus.OK);
-
     }
+
+    @Operation(summary = "Get all delivered packs")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully retrieved delivered packs")
+    })
     @GetMapping("/delivered")
-    ResponseEntity<List<ApprovedPackDto>> getDeliveredPacks(HttpServletRequest httpServletRequest) {
+    public ResponseEntity<List<ApprovedPackDto>> getDeliveredPacks(HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
-        List<Pack> packs = deliveryGuyPackService.deliveredPacks(userId) ;
-        List<ApprovedPackDto> approvedPacks = packs.stream().map(approvedPackMapper::toApprovedPackDto).toList();
+        List<Pack> packs = deliveryGuyPackService.deliveredPacks(userId);
+        List<ApprovedPackDto> approvedPacks = packs.stream()
+                .map(approvedPackMapper::toApprovedPackDto)
+                .collect(Collectors.toList());
         return new ResponseEntity<>(approvedPacks, HttpStatus.OK);
-
     }
 
+    @Operation(summary = "Update an existing offer")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully updated offer"),
+            @ApiResponse(responseCode = "400", description = "Bad request")
+    })
     @PutMapping("/offer/{id}")
-    ResponseEntity<OfferResDto>updateOffer(@PathVariable UUID id , @RequestBody OfferRequest offerRequest, HttpServletRequest httpServletRequest) {
+    public ResponseEntity<OfferResDto> updateOffer(
+            @PathVariable UUID id,
+            @RequestBody OfferRequest offerRequest,
+            HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
-        Offer offer = deliveryGuyPackService.UpdateOffer(offerRequest,userId,id);
+        Offer offer = deliveryGuyPackService.UpdateOffer(offerRequest, userId, id);
         return new ResponseEntity<>(offerForDeliveryGuyMapper.toOfferResDto(offer), HttpStatus.OK);
     }
 
+    @Operation(summary = "Mark a pack as delivered")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Pack marked as delivered"),
+            @ApiResponse(responseCode = "404", description = "Pack not found")
+    })
     @PutMapping("/{id}/delivered")
-    ResponseEntity<ApprovedPackDto>deliver(@PathVariable UUID id , HttpServletRequest httpServletRequest) {
+    public ResponseEntity<ApprovedPackDto> deliver(
+            @PathVariable UUID id,
+            HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
         Pack pack = deliveryGuyPackService.deliverPack(userId, id);
         return new ResponseEntity<>(approvedPackMapper.toApprovedPackDto(pack), HttpStatus.OK);
     }
 
+    @Operation(summary = "Delete an offer")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Offer deleted successfully"),
+            @ApiResponse(responseCode = "404", description = "Offer not found")
+    })
     @DeleteMapping("/offer/{id}")
-    ResponseEntity<String>deleteOffer(@PathVariable UUID id , HttpServletRequest httpServletRequest) {
+    public ResponseEntity<String> deleteOffer(
+            @PathVariable UUID id,
+            HttpServletRequest httpServletRequest) {
         UUID userId = (UUID) httpServletRequest.getAttribute("userId");
         deliveryGuyPackService.deleteOffer(userId, id);
-        return new ResponseEntity<>("Offer was deleted successfully",HttpStatus.OK);
+        return new ResponseEntity<>("Offer was deleted successfully", HttpStatus.OK);
     }
-
 }
